Enable strict typings on openapi definitions
